# Nara

./: .gitignore  README.md  debug_auth.py  technical-implementation
api/: features  hinduai.db  main.py  manage_db.py  pyproject.toml  requirements.txt  response.csv  test.py
api/database/: database.py  db_engine.py  models.py
api/migrations/: env.py
api/migrations/versions/: 5f4a82c6144a_migrate_to_supabase.py  a4d6136abcf7_initial_model_push.py
api/services/: chat.py  ref.py
api/utils/: database.py
client/: .gitignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/.github/workflows/: main_ciceroai.yml
client/public/: index.html
client/src/: App.css  App.js  index.js
client/src/components/: AboutPage.js  DeleteModal.js  LoginPage.js  Message.js  Sidebar.js
client/src/styles/: AboutPage.css  DeleteModal.css  LoginPage.css  Message.css  Sidebar.css
client/src/utils/: apiClient.js
